# pyside6-qtermwidget

./: .gitignore  .gitmodules  CMakeLists.txt  log.txt  pyproject.toml  pyproject.toml.jinja  readme.md  todo.md
.github/workflows/: ci.yml
cmake/: LXQTBuildTools.cmake  QTermWidget.cmake  ShibokenBindings.cmake
src/: __init__.py  qtermwidget_bindings.h  typesystem_qtermwidget.xml
tests/: test_qtermwidget_wheel.py
utils/: custom_auditwheel.py  find_libs.py
