[build-system]
requires = ["scikit-build-core>=0.10", "wheel", "setuptools", "PySide6==6.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyside6-qtermwidget"
version = "0.1.0"
description = "Python bindings for QTermWidget using Shiboken6"
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
build.verbose = true
