[build-system]
requires = [
    "scikit-build-core>=0.10",
    "wheel",
    "setuptools",
    "PySide6==6.9.0",
    "shiboken6==6.9.0",
    "shiboken6-generator==6.9.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyside6-qtermwidget"
version = "0.1.0"
description = "Python bindings for QTermWidget using Shiboken6"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv2 or later (GPLv2+)",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
build.verbose = true
wheel.packages = ["qtermwidget"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_34"
macos.archs = ["arm64"]
build = [
    #"cp311-manylinux_x86_64",
    "cp312-manylinux_x86_64",
    #"cp313-manylinux_x86_64",
]
build-verbosity = 1
container-engine = "podman"
linux.before-build = [
    "dnf install -y tree libstdc++-devel mesa-libGL libxslt libxslt-devel libxkbcommon-devel clang clang-devel",
    "python -m pip install --upgrade pip",
]
macos.before-build = [
    "brew install cmake llvm"
]

[tool.cibuildwheel.linux.environment] 
Qt6_DIR = "/host/tmp/Qt/6.9.0/gcc_64"
QT6_INSTALL_DIR = "/host/tmp/Qt/6.9.0/gcc_64"
CMAKE_PREFIX_PATH = "/host/tmp/Qt/6.9.0/gcc_64/lib/cmake"
LD_LIBRARY_PATH = "/host/tmp/Qt/6.9.0/gcc_64/lib:$LD_LIBRARY_PATH"
CC = "clang"
CXX = "clang++" 

[tool.cibuildwheel.macos.environment]
Qt6_DIR="/host/Qt/${{ matrix.version }}/macos"
QT6_INSTALL_DIR="${{ github.workspace }}/Qt/${{ matrix.version }}/macos"
